--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "-twitter-dm",
   "version": "0.0.0",
+  "homepage": "https://alexislopes.github.io/twitter-dm/",
   "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "vue": "^3.2.45"
@@ -13,6 +15,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.14",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "vite": "^4.0.0"
